# prop-desk-quant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHAT_HANDOFF.md  CLAUDE.md  PROJECT_MAP.md  README.md  gex_history.json  gex_history_ndx.json  gex_history_qqq.json  gex_history_spx.json  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements-research.txt  requirements.txt
.streamlit/: config.toml
apps/: HANDOFF_CODEX.md  __init__.py
context/: PROJECT_inverse_butterfly_backtest.md  PROJECT_pl5_bwb_backtest.md  PROJECT_short_strangle_rut_backtest.md  control_panel_redesign.md  dashboard_ai_pack.md  dashboard_deploy_guide.md  data_map.md  known_issues.md  occurrence_scanner_atr_explicacao_CZ.md  occurrence_sm_cenarios_gabarito.md  op_control_panel_ai_reporting_plan.md  op_control_panel_diagnosis.md  op_control_panel_improvements.md  system_overview.md  workflows.md
docs/: architecture.md  deploy_dashboard_vercel_render.md  forwardtest_handoff_2026-05-08.md  runbook.md
infra/: Dockerfile.downloader  docker-compose.yml  entrypoint.sh  gcp_deploy.sh  requirements-ibkr.txt  vm_startup.sh
reports/: gex_data_feed_research_2026-06-12.md  monthly_summary.csv  occurrence_matrix_report_2026-04-29.html  occurrence_matrix_report_2026-04-29.md  occurrence_matrix_report_2026-05-03.html  occurrence_matrix_report_2026-05-03.md  trades_snapshot_2026-04-27.json  trades_snapshot_2026-04-28.json  trades_snapshot_2026-04-29.json  trades_snapshot_2026-04-30.json  trades_snapshot_2026-05-04.json  trades_snapshot_2026-05-06.json  trades_snapshot_2026-05-08.json  trades_snapshot_2026-05-09.json  trades_snapshot_2026-05-11.json  trades_snapshot_2026-05-14.json  trades_snapshot_2026-05-19.json  trades_snapshot_2026-05-29.json  trades_snapshot_2026-06-08.json  trades_snapshot_latest.json  vix_history.csv
scripts/: add_dashboard_ai_pack.py  batman_export_app.py  batman_sweep.py  build_control_panel_template.py  build_ibfly_pdf.py  build_om_slices.py  build_pl5_pdf.py  clean_db_robots.py  cz_dashboard_app.py  dry_run_briefing.py  export_control_panel.py  gdrive_reauth.py  gex_compare.py  gex_csv_parser.py  gex_input.py  gex_ocr_helper.py  gex_xcheck.py  hedge_hog_export_app.py  ibfly_export_app.py  ibfly_fix_tp.py  ibfly_merge_chunks.py  ibfly_minute_xcheck.py  ibkr_step1_contract_gen.py  ibkr_step2_bulk_downloader.py  ibkr_step3_daily_assembler.py  ic7_backtest.py  ic7_viewer.py  ic_ironfly_export.py  ic_ironfly_runner.py  inverse_butterfly_sweep.py  iron_duck_export_app.py  jl_clean_anomalies.py  jl_export_app.py  layer_b_analyze.py  layer_b_export_app.py  md_step1_extractor.py  md_step2_mass_extractor.py  md_step3_strangle_extractor.py  (+23 more)
(+454 files in other folders)
